tests/spec/pass/select_order_deterministic.aja
ch = chan()
send(ch, 5)
select:
    case send(ch, 9):
        print("send-first")
    case recv(ch) as v:
        print(v)
