tests/spec/fail/select_invalid_case_expr.aja
select:
    case print(1):
        print("x")
